# MiriaGo

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pubspec.yaml
docs/: RELEASE.md  USAGE.md  privacy.md
ios/: Podfile
lib/: app_shell.dart  app_theme.dart  app_version.dart  main.dart
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop_db.rs  main.rs  storage.rs
test/: anitabi_client_test.dart  anitabi_image_fetcher_test.dart  anitabi_image_url_test.dart  anitabi_link_parser_test.dart  anitabi_network_image_test.dart  app_managed_file_paths_test.dart  app_scaled_route_test.dart  app_version_test.dart  bangumi_api_client_test.dart  bangumi_subject_type_test.dart  camera_capture_aspect_ratio_test.dart  camera_storage_test.dart  color_grading_params_test.dart  comparison_export_config_test.dart  comparison_exporter_io_test.dart  coordinate_parser_test.dart  current_location_resolver_test.dart  desktop_asset_image_test.dart  desktop_repository_state_test.dart  image_viewer_screen_test.dart  limited_concurrency_test.dart  map_marker_clustering_test.dart  map_navigation_launcher_test.dart  map_tile_config_test.dart  pilgrimage_work_dropdown_test.dart  plan_export_delivery_io_test.dart  plan_export_rebased_paths_test.dart  plan_export_v2_test.dart  plan_group_utils_test.dart  plan_import_package_test.dart  plan_package_test.dart  reference_image_cache_test.dart  sample_plan_test.dart  sqlite_pilgrimage_repository_test.dart  (+2 more)
(+164 files in other folders)
