[package]
name = "miriago-desktop"
version = "1.1.0"
description = "MiriaGo desktop launcher"
authors = ["BilyHurington"]
license = "MIT"
repository = "https://github.com/BilyHurington/MiriaGo"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
rfd = "0.15"
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
